# StableLFRaugmentation

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  example0_basics.ipynb  example1_nonlinear_baseline_model.ipynb  example2_augmentation_structures.ipynb  example3_regularization_options.ipynb  example4_parallel_training.ipynb
examples/CascadedTanks_benchmark/: README.md  cascaded_tanks_example.py  hyperparams.yaml
examples/F1Tenth_example/: README.md  f1tenth_example.py  hyperparam_config.yaml
examples/F1Tenth_example/test_data/circle_0.45/: everything.csv
examples/F1Tenth_example/test_data/circle_0.65/: data_reference.csv
examples/F1Tenth_example/test_data/circle_0.95/: everything.csv
examples/F1Tenth_example/test_data/eight_0.7/: data_reference.csv
examples/F1Tenth_example/test_data/eight_0.8/: everything.csv
examples/F1Tenth_example/test_data/eight_1.0/: everything.csv
examples/group_lasso_example/: README.md  gl_example.py  hyperparams.yaml
examples/iterative_l1_reg_example/: README.md  fric_params.npz  hyperparams.yaml  l1_reg_example.py
src/model_augmentation_jax/: __init__.py  augmentation_structures.py  baseline_models.py  networks.py  optimization_base.py  utils.py
