[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-augmentation-jax"
version = "0.1.0"
description = "LFR-based model augmentation implemented in JAX with extensions for guaranteed well-posedness and stability."
authors = [
    {name = "Bendeguz Gyorok", email = "gyorokbende@sztaki.hu"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "absl-py==2.3.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "chex==0.1.90",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "diffrax==0.6.1",
    "equinox==0.11.10",
    "etils==1.13.0",
    "flax==0.10.4",
    "fonttools==4.60.1",
    "fsspec==2025.9.0",
    "humanize==4.13.0",
    "idna==3.11",
    "importlib_resources==6.5.2",
    "jax==0.4.31",
    "jax-sysid==1.0.11",
    "jaxlib==0.4.31",
    "jaxopt==0.8.5",
    "jaxtyping==0.3.3",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "lineax==0.0.7",
    "markdown-it-py==4.0.0",
    "matplotlib==3.10.7",
    "mdurl==0.1.2",
    "ml_dtypes==0.5.3",
    "msgpack==1.1.2",
    "nest-asyncio==1.6.0",
    "nonlinear_benchmarks==1.0.0",
    "numpy==2.2.6",
    "opt_einsum==3.4.0",
    "optax==0.2.5",
    "optimistix==0.0.10",
    "orbax-checkpoint==0.6.4",
    "packaging==25.0",
    "pillow==11.3.0",
    "progressbar==2.5",
    "protobuf==6.32.1",
    "Pygments==2.19.2",
    "pyparsing==3.2.5",
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.17",
    "PyQt5_sip==12.17.1",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.3",
    "rarfile==4.2",
    "requests==2.32.5",
    "rich==14.2.0",
    "scipy==1.14.1",
    "six==1.17.0",
    "tensorstore==0.1.78",
    "toolz==1.0.0",
    "tqdm==4.67.1",
    "treescope==0.1.10",
    "typeguard==2.13.3",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
    "wadler_lindig==0.1.7",
    "zipp==3.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]